updated contact info and changed name to Healthcare Baltimore

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Medicare Baltimore</title>
+    <title>Healthcare Baltimore</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
           </button>
 		
-          <a class="navbar-brand" href="#">Medicare Baltimore</a>
+          <a class="navbar-brand" href="#">Healthcare Baltimore</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -59,7 +59,7 @@
 	<div class="container">
     <div class="jumbotron">
       <h1>Welcome!</h1>
-      <p><strong>At Medicare Baltimore</strong>, we are dedicated to serving those in need of insurance. We specialize in insurance for seniors, and are proudly independent, answering only to our customers. The choices our customers make are key life decisions, and we work every day to help you find the right solutions at affordable prices. What we do at Medicare Baltimore is important, personal, and precise. Every time we help a customer make a decision that is right for them, it makes them and our organization stronger.</p>
+      <p><strong>At Healthcare Baltimore</strong>, we are dedicated to serving those in need of insurance. We specialize in insurance for seniors, and are proudly independent, answering only to our customers. The choices our customers make are key life decisions, and we work every day to help you find the right solutions at affordable prices. What we do at Medicare Baltimore is important, personal, and precise. Every time we help a customer make a decision that is right for them, it makes them and our organization stronger.</p>
       <p>Give us a call to see how we can help you and your family!!!
 We are available year-round 7 days a week serving our customers.</p>
       <p><a class="btn btn-primary btn-lg" href="#footer" role="button">Contact Us</a></p>
@@ -196,8 +196,8 @@ Medi-Gap policies are standardized by the federal government, and sold by privat
           </div>
           <div class="col-md-7 col-sm-7 text-right contactInfo">
 				<h3 id="h3Contact">Contact Info</h3>
-				<p><i class="fas fa-phone"></i> 443-929-0433</p>
-				<p><i class="far fa-envelope"></i> avi@medicarebaltimore.com</p>
+				<p><i class="fas fa-phone"></i> 443-699-8593</p>
+				<p><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
 				<p><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
 				<p><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
           </div>
@@ -206,7 +206,7 @@ Medi-Gap policies are standardized by the federal government, and sold by privat
     </section>
 
     <footer id="footer">
-      <p class="text-center">Medicare Baltimore Copyright &copy; 2018</p>
+      <p class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
     </footer>
 
     <script
