--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <span class="icon-bar"></span>
           </button>
 		
-          <a class="navbar-brand" href="#">Healthcare Baltimore</a>
+          <a class="navbar-brand" href="index.html">Healthcare Baltimore</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#showcase">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Under 65 <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -82,7 +82,7 @@ We are available year-round 7 days a week serving our customers.</p>
 Medi-Gap policies are standardized by the federal government, and sold by private insurance companies. The benefits offered in every Medi-Gap policy are standardized by the Federal Government, and can be easily compared between carriers.</p>
             </div>
             
-            <a class="btn btn-default btn-sm showcase-btn">More Info <i class="fas fa-chevron-right"></i></a>
+            <a class="btn btn-default btn-sm showcase-btn" href="medicareSupplementPlan.html">More Info <i class="fas fa-chevron-right"></i></a>
           </div>
         </div>
         <hr>
