added Under 65 and changed h1 to h2

--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -68,7 +68,7 @@
           </div> -->
           <div class="col-md-12 col-sm-12">
             <div class="showcase-one">
-              <h1>Medicare Supplement Plans</h1>
+              <h2>Medicare Supplement Plans</h2>
               <h3 class="text-capitalize">medicare supplement insurance (Medi-Gap)</h3>
               <p>Medi-Gap is supplemental insurance to cover some of the “gaps” that Original Medicare (Medicare Parts A and B) does not cover. Medicare out-of-pocket costs can include deductibles, copayments, and coinsurance.
               Medi-Gap policies are standardized by the federal government, and sold by private insurance companies. The benefits offered in every Medi-Gap policy are standardized by the Federal Government, and can be easily compared between carriers.</p>
@@ -79,13 +79,17 @@
               <p>To be eligible for a Medi-Gap plan, you must be enrolled in Medicare Parts A and B (Original Medicare) and either be 65 years of age or older. The best time to enroll in a Medi-Gap Medicare insurance policy is during your open enrollment period. Your open enrollment period lasts for six months, and begins on the first day of the month in which you are both age 65 years of age or older, and enrolled in Medicare Part A and Part B. During this time, insurance companies are not allowed to deny you a policy or increase your premiums because of pre-existing conditions.</p>
             </div>
 
+            <div class="showcase-one">
+              <h3 class="text-capitalize">Under 65?</h3>
+              <p>Depending on the state you reside in, you may be eligible for Medi-Gap policies if you are under the age of 65. Some states require Medi-Gap insurance providers to sell insurance policies to individual's recieving Social Security Disability benefits for 24 months, or individuals that have been diagnosed with End Stage Renal Disease (ESRD), as these individuals are eligible for Original Medicare. Federal law does not require Medicare Insurance companies to sell policies to those individuals under the age of 65, although some states require that Medicare Insurance providers must offer at least one Medi-Gap plan to those individuals under the age of 65, who are eligible for Original Medicare.</p>
+            </div>
             
 
           </div>
 
           <div class="col-md-12 col-sm-12">
             <div class="showcase-one">
-              <h1>Medicare Supplement Plans Options</h1>
+              <h2>Medicare Supplement Plans Options</h2>
               <h3 class="text-capitalize">medi-gap-plans</h3>
               <p>There are 10 Medi-gap plans to choose from in most states (Massachusetts, Minnesota, and Wisconsin have different Medi-gap plan options). The Federal Government standardizes the plan options available in most states.
               </p>
