added photo in MDC Supplement plan page and added a FAQ page.

--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -41,7 +41,7 @@
         </ul>
       </li>
             <li><a href="#sectionLifeInsurance">Life Insurance</a></li>
-            <li><a href="#info1">FAQ</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -66,7 +66,7 @@
               <img id="img1" src="85.jpeg">
             </div>
           </div> -->
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
               <h2>Medicare Supplement Plans</h2>
               <h3 class="text-capitalize">medicare supplement insurance (Medi-Gap)</h3>
@@ -87,7 +87,7 @@
 
           </div>
 
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
               <h2>Medicare Supplement Plans Options</h2>
               <h3 class="text-capitalize">medi-gap-plans</h3>
@@ -96,6 +96,9 @@
               <p>
                 The 10 Medi-gap plans are Plan A, B, C, D, F, G, K, L, M and N. Insurance companies must offer the same benefits for each lettered plan option. For example, Plan C will always have the same benefits no matter which company you buy it from. The only difference between one insurance company and another is price. Below are the various Medi-Gap policies and their benefits:
               </p>
+              <div class="imgContent">
+              <img src="./img/planLetter.jpg" alt="Plan Letter">
+              </div>
               <p>
                 Check with one of the knowledgeable agents to see what company offers the lowest rate in your particular county.
               </p>
