--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			  </ul>
 			</li>
             <li><a href="#sectionLifeInsurance">Life Insurance</a></li>
-            <li><a href="#info1">FAQ</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
