changed paragraph text to be darker grey.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Medi-Gap policies are standardized by the federal government, and sold by privat
     </section>
 
     <footer id="footer">
-      <p class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
+      <p id="copyrightText" class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
     </footer>
 
     <script
