--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			    <li><a href="#sectionMDAdvantage">Medicare Advantage(Part C)</a></li>
 			  </ul>
 			</li>
-            <li><a href="#sectionLifeInsurance">Life Insurance</a></li>
+            <li><a href="lifeInsurance.html">Life Insurance</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Info <span class="caret"></span></a>
