updated contact info

--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -109,36 +109,36 @@
     </section>
 
 
-    <section id="contact">
-      <div class="container">
-        <div class="row contactFooterContainer">
-          <div class="col-md-5 col-sm-5">
-            <form>
-              <div class="form-group">
-                <label>Name: </label>
-                <input class="form-control" type="text" name="" value="" placeholder="Enter Name">
+        <section id="contact">
+          <div class="container">
+            <div class="row contactFooterContainer">
+              <div class="col-md-5 col-sm-5">
+                <form>
+                  <div class="form-group">
+                    <label>Name: </label>
+                    <input class="form-control" type="text" name="" value="" placeholder="Enter Name">
+                  </div>
+                  <div class="form-group">
+                    <label>Email: </label>
+                    <input class="form-control" type="text" name="" value="" placeholder="Enter Email">
+                  </div>
+                  <div class="form-group">
+                    <label>Message: </label>
+                    <textarea class="form-control" name="" value="" placeholder="Enter Message"></textarea>
+                  </div>
+                  <button class="btn btn-submit">Submit</button>
+                </form>
               </div>
-              <div class="form-group">
-                <label>Email: </label>
-                <input class="form-control" type="text" name="" value="" placeholder="Enter Email">
-              </div>
-              <div class="form-group">
-                <label>Message: </label>
-                <textarea class="form-control" name="" value="" placeholder="Enter Message"></textarea>
-              </div>
-              <button class="btn btn-submit">Submit</button>
-            </form>
-          </div>
-          <div class="col-md-7 col-sm-7 text-right contactInfo">
+              <div class="col-md-7 col-sm-7 text-right contactInfo">
             <h3 id="h3Contact">Contact Info</h3>
-            <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-929-0433</p>
-            <p class="eachContactInfo"><i class="far fa-envelope"></i> avi@medicarebaltimore.com</p>
-            <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
-            <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
+            <p><i class="fas fa-phone"></i> 443-699-8593</p>
+            <p><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
+            <p><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </section>
+        </section>
 
     <footer id="footer">
       <p class="text-center">Medicare Baltimore Copyright &copy; 2018</p>
