--- a/test.html
+++ b/test.html
@@ -162,11 +162,11 @@
             </form>
           </div>
           <div class="col-md-7 col-sm-7 text-right contactInfo">
-            <h3 id="h3Contact">Contact Info</h3>
-            <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-929-0433</p>
-            <p class="eachContactInfo"><i class="far fa-envelope"></i> avi@medicarebaltimore.com</p>
-            <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
-            <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
+        <h3 id="h3Contact">Contact Info</h3>
+        <p><i class="fas fa-phone"></i> 443-699-8593</p>
+        <p><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
+        <p><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
+        <p><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
           </div>
         </div>
       </div>
