added an update photos on MDC Supplement Plans Page.

--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -97,8 +97,12 @@
                 The 10 Medi-gap plans are Plan A, B, C, D, F, G, K, L, M and N. Insurance companies must offer the same benefits for each lettered plan option. For example, Plan C will always have the same benefits no matter which company you buy it from. The only difference between one insurance company and another is price. Below are the various Medi-Gap policies and their benefits:
               </p>
               <div class="imgContent">
-              <img src="./img/planLetter.jpg" alt="Plan Letter">
+              <img class="eachImage" src="./img/MDCPlanFGN.png" alt="Plans">
               </div>
+              <div class="imgContent">
+              <img class="eachImage" src="./img/MDCPartBCoverage.png" alt="Plans">
+              </div>
+
               <p>
                 Check with one of the knowledgeable agents to see what company offers the lowest rate in your particular county.
               </p>
