Added FAQ to MDC Supplement Plans page.

--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -106,11 +106,65 @@
               <p>
                 Check with one of the knowledgeable agents to see what company offers the lowest rate in your particular county.
               </p>
+              <hr>
+              </div>
+              </div>
+
+
+
+              <div class="col-md-12 col-sm-12 mainContent">
+                <div class="showcase-one">
+                  <h2>Frequently Asked Questions (FAQ)</h2>
+                  <h3 class="text-capitalize">What is Medicare?</h3>
+                  <p>Medicare is a federal health insurance program that provides affordable health care options for seniors 65 and older, disabled citizens, and those suffering from ESRD. There are four parts: Part A, Part B, Part C, and Part D. Medicare Part A and Part B (also known as Original Medicare) provide hospital and medical insurance. Medicare Part C is known as Medicare Advantage. Medicare Part D provides prescription drug coverage.</p>
+
+                  <h3 class="text-capitalize">What is Medicare Supplement Insurance?</h3>
+                  <p>
+                    Medicare Supplement insurance (Medi-Gap) is a private form of medical insurance, which covers some Medicare out-of-pocket costs. A policy can help pay for Medicare deductibles, co-payments, co-insurance, and other costs.
+                  </p>
+
+                  <h3 class="text-capitalize">Am I eligible for Medicare Supplement Insurance?</h3>
+                  <p>
+                    If you are enrolled in Medicare Parts A and B (Original Medicare), and are 65 and older or have a qualifying disability, you are eligible for Medi-Gap. You are also eligible if you are enrolled in Medicare Part A, are 65 or older, and are currently enrolling in Medicare Part B.
+                  </p>
+
+                  <h3 class="text-capitalize">What are the differences between Medi-Gap plans?</h3>
+                  <p>
+                    There are 10 different Medi-Gap plans currently available for purchase in most states: Plans A, B, C, D, F, G, K, L, M, and N. Each plan offers a different array of benefits. Insurance companies must offer the same benefits for each plan option. For example, one insurer’s Plan G will have the same benefits as another insurer’s Plan G. The only difference between the two companies’ policies is price.
+                  </p>
+
+                  <h3 class="text-capitalize">Can an insurance company refuse to sell me a Medi-Gap Plan?</h3>
+                  <p>
+                    If you enroll during the open enrollment period, an insurance company cannot deny you coverage. If you miss your open enrollment period, an insurance company is legally allowed to deny your application. The insurance company will determine your eligibility outside of the open enrollment period, by your current and past medical history. If you have had significant medical issues in the past 10 years, the insurance company will consider this and might not approve your application. Chances are, if you have been healthy for the past 10 years, with no significant medical conditions, you will be approved. The insurance company might place a waiting period on individuals with a pre-existing condition.
+                  </p>
+
+                  <h3 class="text-capitalize">What is the “Waiting Period”?</h3>
+                  <p>
+                    The Medi-Gap waiting period is only applicable to those who sign up for a Medi-Gap plan outside of the open enrollment period. If you enroll after your OEP, the insurance company may enforce a waiting period that lasts up to 6 months. During this time, the insurance company can refuse to cover the out-of-pocket treatment costs related to any pre-existing conditions.
+                  </p>
+
+                  <h3 class="text-capitalize">Does Medi-Gap cover Prescription Drugs?</h3>
+                  <p>
+                    Medi-Gap policies do not provide prescription drug coverage. Medi-Gap plans stopped providing prescription drug coverage in 2006. If you are enrolled in a Medi-Gap policy, you can get prescription drug coverage through Medicare Part D.
+                  </p>
+
+                  <h3 class="text-capitalize">Will my premium change?</h3>
+                  <p>
+                    The pricing structure used on your Medi-Gap policy will influence impact how your premium increases in the future. There are 3 types of pricing structures: attained-age pricing, community-rated pricing, and issue-age pricing. If your policy is attained-age, the premium will increase as you age. If your policy is issue-age, the premium will not increase as you age but can increase based on other factors. If your policy is community-rated, the premium can increase based on inflation.
+                  </p>
+
+                  <h3 class="text-capitalize">What happened to Medi-Gap Plans E, H, I, J, and K?</h3>
+                  <p>
+                    Medi-Gap plans E, H, I, and J are no longer available for purchase. In 2010, the federal government added new plans and removed older plans including plans E, H, I, J, and K. If you have plan E, H, I, J, or k, you are still allowed to use your policy.
+                  </p>             
             </div>
           </div>
         </div>
       </div>
     </section>
+
+
+
 
 
         <section id="contact">
@@ -158,11 +212,11 @@
     <script>
       window.sr = ScrollReveal();
       sr.reveal('.showcase-one', {
-        duration: 2000,
+        duration: 1000,
         origin:'bottom'
       });
       sr.reveal('.navbar', {
-        duration: 2000,
+        duration: 1000,
         origin:'bottom'
       });
       sr.reveal('.showcase-left', {
