--- a/lifeInsurance.html
+++ b/lifeInsurance.html
@@ -143,7 +143,7 @@
              <h4>Universal Life Insurance Coverage</h4>
              <p class="tenTypesText">
               Another form of permanent coverage is Universal Life Insurance. This type of life insurance also provides a death benefit and a cash value component where the funds are allowed to grow tax-deferred.
-              </p>
+            </p>
             <p class="tenTypesText">
               Universal Life Insurance is more flexible than whole life coverage, though. This is because the policyholder is allowed – within certain guidelines – to choose how much of his or her premium dollars will go towards the policy’s death benefit, and how much will go towards the policy’s cash value.
             </p>
@@ -239,98 +239,144 @@
 </div> 
 </div> 
 
+<div class="col-md-12 col-sm-12 mainContent">
+  <div class="showcase-one">
+    <h3 class="text-capitalize">Understanding “Cash Value”</h3>
+    <p>
+      When an insurance policy contains a guaranteed cash value for a guaranteed premium, it means that the premium is larger at the beginning of the policy than it would be in a term policy, so the additional premium can be invested in a “separate account” controlled by either the insurer or the policyholder, in order to grow the cash value.
+    </p>
+    <p>
+      Whatever gains are earned can be used in a few different ways: to increase the death benefit, to borrow against for some later use, or to keep the policy in effect so that you can stop paying monthly premiums. If you have a cash value policy, it’s best to hold it until death or retirement, so you can allow for probable gains.
+    </p>
+
+    <h3 class="text-capitalize">A Closer Look at the Tax Benefits of Life Insurance</h3>
+    <p>
+      These tax benefits within a universal life insurance policies are similar to 401ks and IRAs. Annual earnings on the investment part of the policy don’t get taxed and any taxable gains when cashing out on a policy can be reduced by the amount of insurance protection the plan provides. Furthermore, in the case of death, the policy holder’s gains usually aren’t taxed.
+    </p>
+    <p>
+      These tax benefits within a universal life insurance policies are similar to 401ks and IRAs. Annual earnings on the investment part of the policy don’t get taxed and any taxable gains when cashing out on a policy can be reduced by the amount of insurance protection the plan provides. Furthermore, in the case of death, the policy holder’s gains usually aren’t taxed.
+    </p>
+    <h3 class="text-capitalize">How and Where to Get the Best Premium Quotes on All Types of Life Insurance Coverage</h3>
+    <p>
+      Without life insurance, hard-earned assets and savings that were intended for other purposes may have to be used for paying off debt, funding living costs, or paying the high cost of one’s final expenses – which today can average more than $10,000 in some areas.
+    </p>
+    <p>
+      Getting a set of quotes on life insurance is simple. Give us a call, and we would be happy to have an agent work with you on building a forula to decide the best type of coverage that will fit your personal needs best.
+    </p>
+    <p>
+      In the past, there were only a few types of life insurance policies to choose from. However, as time has passed, many insurers have added to their array of product options. This has allowed individuals and families to find coverage that is best for them and their budgets.
+    </p>
+    <p>
+      Ultimately you need to decide which type of life insurance policy is best for your needs.  Understanding how each one works will make sure you make the right decision.
+    </p>
+    <p>
+      With all of the many types of life insurance and carriers to choose from today, it can help to have an ally on your side that can help you choose the coverage that will fit your needs the best. So, contact us today – we’re here to help.
+    </p>
+    <p class="noIndent">
+      We represent leaders in Life Insurance. We represent carriers who offer all types of life insurance.
+    </p>
+    <p class="noIndent">
+      <em>It pays to shop with a Broker who handles many insurance companies.</em>
+    </p>
+  </div>
+</div>
 </div> 
 </div>
 </section>
 
 
-<section id="contact">
-  <div class="container">
-    <div class="row contactFooterContainer">
-      <div class="col-md-5 col-sm-5">
-        <form>
-          <div class="form-group">
-            <label>Name: </label>
-            <input class="form-control" type="text" name="" value="" placeholder="Enter Name">
+
+
+
+
+
+    <section id="contact">
+      <div class="container">
+        <div class="row contactFooterContainer">
+          <div class="col-md-5 col-sm-5">
+            <form>
+              <div class="form-group">
+                <label>Name: </label>
+                <input class="form-control" type="text" name="" value="" placeholder="Enter Name">
+              </div>
+              <div class="form-group">
+                <label>Email: </label>
+                <input class="form-control" type="text" name="" value="" placeholder="Enter Email">
+              </div>
+              <div class="form-group">
+                <label>Message: </label>
+                <textarea class="form-control" name="" value="" placeholder="Enter Message"></textarea>
+              </div>
+              <button class="btn btn-submit">Submit</button>
+            </form>
           </div>
-          <div class="form-group">
-            <label>Email: </label>
-            <input class="form-control" type="text" name="" value="" placeholder="Enter Email">
+          <div class="col-md-7 col-sm-7 text-right contactInfo">
+            <h3 id="h3Contact">Contact Info</h3>
+            <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-929-0433</p>
+            <p class="eachContactInfo"><i class="far fa-envelope"></i> avi@medicarebaltimore.com</p>
+            <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
+            <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
           </div>
-          <div class="form-group">
-            <label>Message: </label>
-            <textarea class="form-control" name="" value="" placeholder="Enter Message"></textarea>
-          </div>
-          <button class="btn btn-submit">Submit</button>
-        </form>
+        </div>
       </div>
-      <div class="col-md-7 col-sm-7 text-right contactInfo">
-        <h3 id="h3Contact">Contact Info</h3>
-        <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-929-0433</p>
-        <p class="eachContactInfo"><i class="far fa-envelope"></i> avi@medicarebaltimore.com</p>
-        <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
-        <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<footer id="footer">
-  <p class="text-center">Medicare Baltimore Copyright &copy; 2018</p>
-</footer>
+    <footer id="footer">
+      <p class="text-center">Medicare Baltimore Copyright &copy; 2018</p>
+    </footer>
 
 
-<script
-src="https://code.jquery.com/jquery-3.2.1.js"
-integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.js"
+    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<script>
-  window.sr = ScrollReveal();
-  sr.reveal('.showcase-one', {
-    duration: 2000,
-    origin:'bottom'
-  });
-  sr.reveal('.navbar', {
-    duration: 2000,
-    origin:'bottom'
-  });
-  sr.reveal('.showcase-left', {
-    duration: 2000,
-    origin:'top',
-    distance:'300px'
-  });
-  sr.reveal('.showcase-right', {
-    duration: 2000,
-    origin:'right',
-    distance:'300px'
-  });
-  sr.reveal('.showcase-btn', {
-    duration: 2000,
-    delay: 2000,
-    origin:'bottom'
-  });
-  sr.reveal('#testimonial div', {
-    duration: 2000,
-    origin:'bottom'
-  });
-  sr.reveal('.info-left', {
-    duration: 2000,
-    origin:'left',
-    distance:'300px',
-    viewFactor: 0.2
-  });
-  sr.reveal('.info-right', {
-    duration: 2000,
-    origin:'right',
-    distance:'300px',
-    viewFactor: 0.2
-  });
-</script>
+    <script>
+      window.sr = ScrollReveal();
+      sr.reveal('.showcase-one', {
+        duration: 2000,
+        origin:'bottom'
+      });
+      sr.reveal('.navbar', {
+        duration: 2000,
+        origin:'bottom'
+      });
+      sr.reveal('.showcase-left', {
+        duration: 2000,
+        origin:'top',
+        distance:'300px'
+      });
+      sr.reveal('.showcase-right', {
+        duration: 2000,
+        origin:'right',
+        distance:'300px'
+      });
+      sr.reveal('.showcase-btn', {
+        duration: 2000,
+        delay: 2000,
+        origin:'bottom'
+      });
+      sr.reveal('#testimonial div', {
+        duration: 2000,
+        origin:'bottom'
+      });
+      sr.reveal('.info-left', {
+        duration: 2000,
+        origin:'left',
+        distance:'300px',
+        viewFactor: 0.2
+      });
+      sr.reveal('.info-right', {
+        duration: 2000,
+        origin:'right',
+        distance:'300px',
+        viewFactor: 0.2
+      });
+    </script>
 
-<script>
-  $(function() {
+    <script>
+      $(function() {
       // Smooth Scrolling
       $('a[href*="#"]:not([href="#"])').click(function() {
         if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
@@ -345,6 +391,9 @@ crossorigin="anonymous"></script>
         }
       });
     });
+  </script>
+
+  <script src="./js/app.js">
   </script>
 </body>
 </html>
