updated contact info in all pages.

--- a/index.html
+++ b/index.html
@@ -194,19 +194,19 @@ Medi-Gap policies are standardized by the federal government, and sold by privat
               <button class="btn btn-submit">Submit</button>
             </form>
           </div>
-          <div class="col-md-7 col-sm-7 text-right contactInfo">
-				<h3 id="h3Contact">Contact Info</h3>
-				<p><i class="fas fa-phone"></i> 443-699-8593</p>
-				<p><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
-				<p><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
-				<p><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
+          <div class="col-md-7 col-sm-7 contactInfo">
+            <h3 id="h3Contact">Contact Info</h3>
+            <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-699-8593</p>
+            <p class="eachContactInfo"><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
+            <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
+            <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
           </div>
         </div>
       </div>
     </section>
 
     <footer id="footer">
-      <p id="copyrightText" class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
+      <p class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
     </footer>
 
     <script
