--- a/lifeInsurance.html
+++ b/lifeInsurance.html
@@ -310,10 +310,10 @@
               <button class="btn btn-submit">Submit</button>
             </form>
           </div>
-          <div class="col-md-7 col-sm-7 text-right contactInfo">
+          <div class="col-md-7 col-sm-7 contactInfo">
             <h3 id="h3Contact">Contact Info</h3>
-            <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-929-0433</p>
-            <p class="eachContactInfo"><i class="far fa-envelope"></i> avi@medicarebaltimore.com</p>
+            <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-699-8593</p>
+            <p class="eachContactInfo"><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
             <p class="eachContactInfo"><i class="fas fa-map-marker-alt"></i> Owings Mills, MD</p>
             <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
           </div>
@@ -322,7 +322,7 @@
     </section>
 
     <footer id="footer">
-      <p class="text-center">Medicare Baltimore Copyright &copy; 2018</p>
+      <p class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
     </footer>
 
 
@@ -342,37 +342,7 @@
         duration: 2000,
         origin:'bottom'
       });
-      sr.reveal('.showcase-left', {
-        duration: 2000,
-        origin:'top',
-        distance:'300px'
-      });
-      sr.reveal('.showcase-right', {
-        duration: 2000,
-        origin:'right',
-        distance:'300px'
-      });
-      sr.reveal('.showcase-btn', {
-        duration: 2000,
-        delay: 2000,
-        origin:'bottom'
-      });
-      sr.reveal('#testimonial div', {
-        duration: 2000,
-        origin:'bottom'
-      });
-      sr.reveal('.info-left', {
-        duration: 2000,
-        origin:'left',
-        distance:'300px',
-        viewFactor: 0.2
-      });
-      sr.reveal('.info-right', {
-        duration: 2000,
-        origin:'right',
-        distance:'300px',
-        viewFactor: 0.2
-      });
+
     </script>
 
     <script>
