added content to MDCAdvantagePartC page.

--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -37,7 +37,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Medicare <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="medicareSupplementPlan.html">Medicare Supplement Plans</a></li>
-          <li><a href="#sectionMDAdvantage">Medicare Advantage(Part C)</a></li>
+          <li><a href="medicareAdvantagePartC.html">Medicare Advantage(Part C)</a></li>
         </ul>
       </li>
             <li><a href="lifeInsurance.html">Life Insurance</a></li>
