--- a/lifeInsurance.html
+++ b/lifeInsurance.html
@@ -45,8 +45,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Info <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Resources</a></li>
-              <li><a href="#">Seminars</a></li>
+              <li><a href="resources.html">Resources</a></li>
+                <li><a href="seminars.html">Seminars</a></li>
             </ul>
           </li>
           <li><a href="#contact">Contact</a></li>
