updated content on the index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<div class="container">
     <div class="jumbotron">
       <h1>Welcome!</h1>
-      <p><strong>At Healthcare Baltimore</strong>, we are dedicated to serving those in need of insurance. We specialize in insurance for seniors, and are proudly independent, answering only to our customers. The choices our customers make are key life decisions, and we work every day to help you find the right solutions at affordable prices. What we do at Medicare Baltimore is important, personal, and precise. Every time we help a customer make a decision that is right for them, it makes them and our organization stronger.</p>
+      <p><strong>At Healthcare Baltimore</strong>, we are dedicated to serving those in need of insurance. We specialize in insurance for individuals and groups under 65, and seniors that are Medicare eligible. We are proudly independent, answering only to our customers. The choices our customers make are key life decisions, and we work every day to help you find the right solutions at affordable prices. What we do at Healthcare Baltimore is important, personal, and precise. Every time we help a customer make a decision that is right for them, it makes them and our organization stronger.</p>
       <p>Give us a call to see how we can help you and your family!!!
 We are available year-round 7 days a week serving our customers.</p>
       <p><a class="btn btn-primary btn-lg" href="#footer" role="button">Contact Us</a></p>
