--- a/medicareAdvantagePartC.html
+++ b/medicareAdvantagePartC.html
@@ -29,8 +29,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Under 65 <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Individual Healthcare</a></li>
-                <li><a href="#">Group Healthcare</a></li>
+                <li><a href="individualHealthInsurance.html">Individual Healthcare</a></li>
+                <li><a href="groupHealthInsurance.html">Group Healthcare</a></li>
               </ul>
             </li>
       <li class="dropdown">
