added content to Group Health Insurance Page.

--- a/lifeInsurance.html
+++ b/lifeInsurance.html
@@ -272,10 +272,10 @@
     <p>
       With all of the many types of life insurance and carriers to choose from today, it can help to have an ally on your side that can help you choose the coverage that will fit your needs the best. So, contact us today – we’re here to help.
     </p>
-    <p class="noIndent">
+    <p class="noIndent smallText">
       We represent leaders in Life Insurance. We represent carriers who offer all types of life insurance.
     </p>
-    <p class="noIndent">
+    <p class="noIndent smallText">
       <em>It pays to shop with a Broker who handles many insurance companies.</em>
     </p>
   </div>
