--- a/index.html
+++ b/index.html
@@ -208,24 +208,39 @@ Medi-Gap policies are standardized by the federal government, and sold by privat
     <section id="contact">
       <div class="container">
         <div class="row contactFooterContainer">
-          <div class="col-md-5 col-sm-5">
+          <div class="col-md-6 col-sm-6">
             <form>
               <div class="form-group">
-                <label>Name: </label>
-                <input class="form-control" type="text" name="" value="" placeholder="Enter Name">
+                <div class="grouping">
+                <label><i class="fas fa-user"></i> </label>
+                <input id="contactName" class="form-control" type="text" name="" value="" placeholder="Enter Name">
+                </div>
+                <div>
+                <label><i class="fas fa-phone"></i> </label>
+                <input id="contactPhone" class="form-control" type="text" name="" value="" placeholder="Phone Number">
+                </div>
+              </div>
+              
+              <div class="form-group">
+                <div class="width100">
+                <label><i class="far fa-envelope"></i> </label>
+                <input id="contactEmail" class="form-control" type="text" name="" value="" placeholder="Enter Email">
+                </div>
               </div>
               <div class="form-group">
-                <label>Email: </label>
-                <input class="form-control" type="text" name="" value="" placeholder="Enter Email">
+                
               </div>
               <div class="form-group">
-                <label>Message: </label>
-                <textarea class="form-control" name="" value="" placeholder="Enter Message"></textarea>
+                <div class="width100">
+                <!-- <label>Message: </label> -->
+                <label for="message"> <i class="far fa-comment"></i></label>
+                <textarea id="contactMessage" class="form-control" name="" value="" placeholder="Enter Message"></textarea>
+              </div>
               </div>
               <button class="btn btn-submit">Submit</button>
             </form>
           </div>
-          <div class="col-md-7 col-sm-7 contactInfo">
+          <div class="col-md-6 col-sm-6 contactInfo">
             <h3 id="h3Contact">Contact Info</h3>
             <p class="eachContactInfo"><i class="fas fa-phone"></i> 443-699-8593</p>
             <p class="eachContactInfo"><i class="far fa-envelope"></i> info@healthcarebaltimore.com</p>
