--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><a href="seminars.html">Seminars</a></li>
               </ul>
             </li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
 
         
           </ul>
