--- a/medicareAdvantagePartC.html
+++ b/medicareAdvantagePartC.html
@@ -49,7 +49,7 @@
                 <li><a href="seminars.html">Seminars</a></li>
               </ul>
             </li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
 
         
           </ul>
@@ -177,7 +177,7 @@ When shopping for Medicare Advantage plans “MA” Part C, you need to verify i
         </section>
 
     <footer id="footer">
-      <p class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
+      <p id="copyrightText" class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
     </footer>
 
     <script
