--- a/medicareSupplementPlan.html
+++ b/medicareSupplementPlan.html
@@ -49,7 +49,7 @@
                 <li><a href="seminars.html">Seminars</a></li>
               </ul>
             </li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
 
         
           </ul>
@@ -214,7 +214,7 @@
         </section>
 
     <footer id="footer">
-      <p class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
+      <p id="copyrightText" class="text-center">Healthcare Baltimore Copyright &copy; 2018</p>
     </footer>
 
     <script
