--- a/test.html
+++ b/test.html
@@ -49,7 +49,7 @@
                 <li><a href="#">Seminars</a></li>
               </ul>
             </li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
 
         
           </ul>
@@ -173,7 +173,7 @@
     </section>
 
     <footer id="footer">
-      <p class="text-center">Medicare Baltimore Copyright &copy; 2018</p>
+      <p id="copyrightText" class="text-center">Medicare Baltimore Copyright &copy; 2018</p>
     </footer>
 
 
