fixed minor style problems.

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 mainContent">
             <div class="showcase-one">
-              <h2>Contact Us</h2>
+              <h2 id="contactUs">Contact Us</h2>
               <div class="formContainer2">
               <form id="contactPageForm">
                 <div class="form-group form-group2">
