--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         </p>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Under 65</a>
+          <li><a href="#">Under 65 <i class="fas fa-caret-down"></i></a>
             <ul class="dropdownMenu">
               <li class="under65"><a href="individualHealthInsurance.html">Individual Healthcare</a></li>
               <li class="under65"><a href="groupHealthInsurance.html">Group Healthcare</a></li>
             </ul>
           </li>
-          <li><a href="#">Medicare</a>
+          <li><a href="#">Medicare <i class="fas fa-caret-down"></i></a>
             <ul class="dropdownMenu">
               <li><a href="medicareSupplementPlan.html">Medicare Supplement Plans</a></li>
               <li><a href="medicareAdvantagePartC.html">Medicare Advantage (Part C)</a></li>
             </ul>
           </li>
           <li><a href="lifeInsurance.html">Life Insurance</a></li>
-          <li><a href="#">More Info</a>
+          <li><a href="#">More Info <i class="fas fa-caret-down"></i></a>
             <ul class="dropdownMenu">
               <li class="moreInfo"><a href="resources.html">Resources</a></li>
               <li class="moreInfo"><a href="seminars.html">Seminars</a></li>
@@ -47,7 +47,7 @@
       <p><strong>At Healthcare Baltimore</strong>, we are dedicated to serving those in need of insurance. We specialize in insurance for individuals and groups under 65, and seniors that are Medicare eligible. We are proudly independent, answering only to our customers. The choices our customers make are key life decisions, and we work every day to help you find the right solutions at affordable prices. What we do at Healthcare Baltimore is important, personal, and precise. Every time we help a customer make a decision that is right for them, it makes them and our organization stronger.</p>
       <p>Give us a call to see how we can help you and your family!!!
 We are available year-round 7 days a week serving our customers.</p>
-      <p><a class="btn btn-primary btn-lg" href="#footer" role="button">Contact Us</a></p>
+      <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Contact Us</a></p>
     </div>
     </div>
 
