changed email in contact form from test@mail to info@mail.

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
               <div class="formContainer2">
               <form id="contactPageForm" action="./php/contact2.php" enctype="multipart/form-data" method="POST">
                 
-                <input type="hidden" name="sendtoemail" value="test@healthcarebaltimore.com">
+                <input type="hidden" name="sendtoemail" value="info@healthcarebaltimore.com">
                 <input type='hidden' name='cgiemail-mailopt' value='sync' />
                 
                 <input type="hidden" name="subject" value="HealthcareBaltimore.com - Contact Form" />
