finished responsive design for the home page.

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <section class="showcase" id="sectionThreeColumns">
           <div class="wholeSection">
             <!-- <div class="container"> -->
-              <div class="row flexRow" >
+              <div class="row flexRow flexColumn" >
 
                 <div class="col-50" id="resources">
                   <div class="showcase-left">
@@ -190,7 +190,7 @@
                   </div>
                 </div>
                 <div class="col-50" id="seminars">
-                  <div class="showcase-left" >
+                  <div class="showcase-left seminars" >
                     <h2 class="h2text"><a href="seminars.html" class="h2-blue"><i class="far fa-calendar-alt"></i> Seminars</a></h2>
 
                     <a href="seminars.html" class="showcase-container">
