add responsive design to under 65 section.

--- a/individualHealthInsurance.html
+++ b/individualHealthInsurance.html
@@ -76,10 +76,10 @@
 
 
  
-    <section id="contact">
-      <div class="container">
-        <div class="contactFooterContainer">
-            <div class="formContainer">
+    <section class="contactContainer">
+      <!-- <div class="container"> -->
+        <div class="contactFooterContainer flexColumn">
+          <div class="formContainer">
             <form class="info-left">
               <div class="form-group">
                 <div class="grouping">
@@ -91,20 +91,20 @@
                   <input id="contactPhone" class="form-control" type="text" name="" value="" placeholder="Phone Number">
                 </div>
               </div>
-              
+
               <div class="form-group">
                 <div class="width100">
-                <label><i class="far fa-envelope"></i> </label>
-                <input id="contactEmail" class="form-control" type="text" name="" value="" placeholder="Enter Email">
+                  <label><i class="far fa-envelope"></i> </label>
+                  <input id="contactEmail" class="form-control" type="text" name="" value="" placeholder="Enter Email">
                 </div>
               </div>
-              
+
               <div class="form-group">
                 <div class="width100">
-                <!-- <label>Message: </label> -->
-                <label for="message"> <i class="far fa-comment"></i></label>
-                <textarea id="contactMessage" class="form-control" name="" value="" placeholder="Enter Message"></textarea>
-              </div>
+                  <!-- <label>Message: </label> -->
+                  <label for="message"> <i class="far fa-comment"></i></label>
+                  <textarea id="contactMessage" class="form-control" name="" value="" placeholder="Enter Message"></textarea>
+                </div>
               </div>
               <button class="btn btn-submit">Submit</button>
             </form>
@@ -117,8 +117,8 @@
             <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
           </div>
         </div>
-      </div>
-    </section>
+        <!-- </div> -->
+      </section>
 
     <footer id="footer">
       <p id="copyrightText">Healthcare Baltimore Copyright &copy; 2018</p>
