added responsive style to all pages.

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
 
 
     <section id="contact">
-          <div class="container">
+         <!--  <div class="container"> -->
             <div class="contactFooterContainer">
               
               <div class="contactInfo">
@@ -118,7 +118,7 @@
                 <p class="eachContactInfo"><i class="far fa-clock"></i> 9:00AM-5:00PM</p>
               </div>
             </div>
-          </div>
+          <!-- </div> -->
         </section>
 
     <footer id="footer">
